apps/base/homarr/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: homarr
  labels:
    toolkit.fluxcd.io/tenant: dev-team
    goldilocks.fairwinds.com/enabled: "true"
