apps/base/homarr/helm-template.yaml
---
# Source: homarr/templates/homarr-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: homarr
  labels:
    helm.sh/chart: homarr-1.3.0
    app.kubernetes.io/name: homarr
    app.kubernetes.io/instance: homarr
    app.kubernetes.io/version: "0.15.4"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 7575
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: homarr
    app.kubernetes.io/instance: homarr
---
# Source: homarr/templates/homarr-dc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homarr
  labels:
    helm.sh/chart: homarr-1.3.0
    app.kubernetes.io/name: homarr
    app.kubernetes.io/instance: homarr
    app.kubernetes.io/version: "0.15.4"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: homarr
      app.kubernetes.io/instance: homarr
  template:
    metadata:
      labels:
        helm.sh/chart: homarr-1.3.0
        app.kubernetes.io/name: homarr
        app.kubernetes.io/instance: homarr
        app.kubernetes.io/version: "0.15.4"
        app.kubernetes.io/managed-by: Helm
    spec:
      securityContext:
        {}
      containers:
        - name: homarr
          securityContext:
            {}
          image: "ghcr.io/ajnart/homarr:0.15.3"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 7575
              protocol: TCP
          livenessProbe:
            failureThreshold: 5
            httpGet:
              path: /
              port: 7575
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
            initialDelaySeconds: 10
            timeoutSeconds: 3
            periodSeconds: 10
            failureThreshold: 5
          readinessProbe:
            failureThreshold: 5
            httpGet:
              path: /
              port: 7575
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
            initialDelaySeconds: 10
            timeoutSeconds: 3
            periodSeconds: 10
            failureThreshold: 5
          resources:
            {}
          volumeMounts:
           - name: homarr-config
             mountPath: /app/data/configs
           - name: homarr-database
             mountPath: /data
           - name: homarr-icons
             mountPath: /app/public/icons
      volumes:
        - name: homarr-config
          persistentVolumeClaim:
           claimName: homarr-config
        - name: homarr-database
          persistentVolumeClaim:
           claimName: homarr-database
        - name: homarr-icons
          persistentVolumeClaim:
           claimName: homarr-icons
      nodeSelector: {}
